Correctifs contraste

--- a/style.css
+++ b/style.css
@@ -283,6 +283,16 @@ a:hover {
     padding-left: 0;
 }
 
+@media (max-width: 768px){
+    .row.row-no-gutters{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+}
+
+
 #bloc-1-hero h1 {
     font-size: 32px;
 }
@@ -717,6 +727,7 @@ p {
 h2 {
     font-size: 22px;
     line-height: 1.4em;
+    position: relative;
 }
 
 h3 {
@@ -763,7 +774,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(165, 147, 99, 0.9);
     padding: 40px 40px 40px 40px;
 }
 
@@ -781,20 +792,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #925b41;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #925b41;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #7a4c36!important;
     color: #FFFFFF!important;
 }
 
